Fix content hidden by footer.

--- a/source/stylesheets/portfolio/shared.css.scss
+++ b/source/stylesheets/portfolio/shared.css.scss
@@ -7,6 +7,7 @@
 
   .container {
     padding-top: 4rem;
+    padding-bottom: 10rem;
   }
 
   .container > section {
